Fixes z-index issue.

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -9,6 +9,7 @@ header {
     padding-top:12px;
     position: fixed;
     top: 0;
+    z-index: 1;
 
     nav.top-menu {
         display: -ms-flexbox;
