--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -10,6 +10,7 @@ aside.main-menu {
     left:0;
     height: 100%;
     min-height: 100vh;
+    z-index:2;
 
     ul {
         list-style-type:none;
